fixed contrast error

--- a/css/project4.css
+++ b/css/project4.css
@@ -18,6 +18,7 @@ header nav {
     background-color: #222;
     padding: 10px;
     text-align: center;
+    color: white;
 }
 
 header nav a {
